--- a/contact.liquid
+++ b/contact.liquid
@@ -3,6 +3,7 @@
 
 <head>
     {% include 'head.html' %}
+    <link rel="stylesheet" href="/styles/contact.css">
 </head>
 
 <body>
@@ -10,19 +11,21 @@
         {% include 'header' %}
         <main>
             <div class="container">
-                Hai domande, curiosità, dubbi sulla coltivazione di cannabis?
+                <h1>Contatti</h1>
+                <p>
+                    Hai domande, curiosità, dubbi sulla coltivazione di cannabis?
 
-                Vuoi diventare un volontario di clinkpac.com?
+                    Vuoi diventare un volontario di clinkpac.com?
 
-                Hai bisogno di materiale di informazione sulla coltivazione o qualsiasi altro materiale legato alla
-                cannabis?
+                    Hai bisogno di materiale di informazione sulla coltivazione o qualsiasi altro materiale legato alla
+                    cannabis?
+                </p>
 
-                Email -> canapa@protonmail.com
+                Email -> <a href="mailto:canapa@protonmail.com">canapa@protonmail.com</a>
 
-                Telegram -> t.me/coltivazionelink
+                Telegram -> <a href="https://t.me/coltivazionelink">t.me/coltivazionelink</a>
             </div>
         </main>
-        <div class="grow"></div>
         <footer class="page-footer">
             <div class="container">
                 <small>Copyright <b>{{site.author}}</b></small>
