Add contact and about pages

--- a/index.liquid
+++ b/index.liquid
@@ -9,7 +9,7 @@
 <body>
     <div id="main_wrapper">
         {% include 'header' %}
-        <main>
+        <main class="homepage">
             <div class="container">
                 <div>
                     <img width="150" height="150" class="logo" src="/assets/logo.svg" alt="">
