--- a/about.liquid
+++ b/about.liquid
@@ -3,34 +3,34 @@
 
 <head>
     {% include 'head.html' %}
+    <link rel="stylesheet" href="/styles/about.css">
 </head>
 
 <body>
-    <div id="main_wrapper">
-        {% include 'header' %}
-        <main>
-            <div class="container">
-                Chi siamo?
+    {% include 'header' %}
+    <main>
+        <div class="container">
+            <h2>Chi siamo?</h2>
 
-                Per dare una risposta alle attuali domande di consumo, coltivazione e mutevoli condizioni legali sulla
+            <p>Per dare una risposta alle attuali domande di consumo, coltivazione e mutevoli condizioni legali sulla
                 cannabis.
 
                 Attivi dal 2018, Canapa Coltivazione mette a disposizione a coltivatori/consumatori informazioni sulla
                 cannabis. Sono presenti infinite guide, articoli e molteplici risorse per rispondere a qualsiasi domanda
                 legata alla cannabis.
+            </p>
 
-                Note legali ⚠️
+            <h2>Note legali ⚠️</h2>
 
-                Tutte le informazioni e conversazioni presenti in “Canapa Coltivazione” sono da intendersi
-                esclusivamente al fine di una ampia cultura generale sulla canapa.
-            </div>
-        </main>
-        <footer class="page-footer">
-            <div class="container">
-                <small>Copyright <b>{{site.author}}</b></small>
-            </div>
-        </footer>
-    </div>
+            <p>Tutte le informazioni e conversazioni presenti in “Canapa Coltivazione” sono da intendersi
+                esclusivamente al fine di una ampia cultura generale sulla canapa.</p>
+        </div>
+    </main>
+    <footer class="page-footer">
+        <div class="container">
+            <small>Copyright <b>{{site.author}}</b></small>
+        </div>
+    </footer>
     <div class="overlay" id="main_overlay" onclick="toggleSidebar()"></div>
     <aside id="sidebar">
         <a href="javascript:toggleSidebar()" class="icon-btn" title="Close"><svg class="icon">
