--- a/contact.liquid
+++ b/contact.liquid
@@ -7,31 +7,30 @@
 </head>
 
 <body>
-    <div id="main_wrapper">
-        {% include 'header' %}
-        <main>
-            <div class="container">
-                <h1>Contatti</h1>
+    {% include 'header' %}
+    <main>
+        <div class="contact">
+            <h1>Contatti</h1>
+            <div class="flow">
                 <p>
                     Hai domande, curiosità, dubbi sulla coltivazione di cannabis?
 
-                    Vuoi diventare un volontario di clinkpac.com?
+                <p> Vuoi diventare un volontario di clinkpac.com?</p>
 
-                    Hai bisogno di materiale di informazione sulla coltivazione o qualsiasi altro materiale legato alla
-                    cannabis?
+                <p> Hai bisogno di materiale di informazione sulla coltivazione o qualsiasi altro materiale legato alla
+                    cannabis?</p>
                 </p>
-
-                Email -> <a href="mailto:canapa@protonmail.com">canapa@protonmail.com</a>
-
-                Telegram -> <a href="https://t.me/coltivazionelink">t.me/coltivazionelink</a>
             </div>
-        </main>
-        <footer class="page-footer">
-            <div class="container">
-                <small>Copyright <b>{{site.author}}</b></small>
-            </div>
-        </footer>
-    </div>
+
+            <p>Email → <a href="mailto:canapa@protonmail.com">canapa@protonmail.com</a></p>
+            <p>Telegram → <a href="https://t.me/coltivazionelink">t.me/coltivazionelink</a></p>
+        </div>
+    </main>
+    <footer class="page-footer">
+        <div class="container">
+            <small>Copyright <b>{{site.author}}</b></small>
+        </div>
+    </footer>
     <div class="overlay" id="main_overlay" onclick="toggleSidebar()"></div>
     <aside id="sidebar">
         <a href="javascript:toggleSidebar()" class="icon-btn" title="Close"><svg class="icon">
