Initial support for english and italian languages

--- a/_includes/header-english.liquid
+++ b/_includes/header-english.liquid
@@ -13,7 +13,7 @@
         <div id="lang_cont">
             <a href="javascript:;" id="lang_switch" title="Change language">
                 <img width="24" height="24" src="/assets/english.png" alt="English" />
-                <span>IT</span>
+                <span>EN</span>
             </a>
             <ul>
                 <li>
@@ -21,7 +21,7 @@
                         English</a>
                 </li>
                 <li>
-                    <a href="/"><img width="24" height="24" src="/assets/italy.png" alt="Italian" />
+                    <a href=""><img width="24" height="24" src="/assets/italy.png" alt="Italian" />
                         Italian</a>
                 </li>
             </ul>
