--- a/en/about.liquid
+++ b/en/about.liquid
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    {% include 'header' %}
+    {% include 'header-english' %}
     <main>
         <div class="container">
             <h2>Chi siamo?</h2>
