--- a/en/contact.liquid
+++ b/en/contact.liquid
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    {% include 'header' %}
+    {% include 'header-english' %}
     <main>
         <div class="contact">
             <h1>Contatti</h1>
