--- a/en/index.liquid
+++ b/en/index.liquid
@@ -8,7 +8,7 @@
 
 <body>
     <div id="main_wrapper">
-        {% include 'header' %}
+        {% include 'header-english' %}
         <main class="homepage">
             <div class="container">
                 <div class="content">
