--- a/en/contact.liquid
+++ b/en/contact.liquid
@@ -13,13 +13,12 @@
             <h1>Contatti</h1>
             <div class="flow">
                 <p>
-                    Hai domande, curiosità, dubbi sulla coltivazione di cannabis?
+                    Hai domande, curiosità, dubbi sulla coltivazione di cannabis?</p>
 
                 <p> Vuoi diventare un volontario di clinkpac.com?</p>
 
                 <p> Hai bisogno di materiale di informazione sulla coltivazione o qualsiasi altro materiale legato alla
                     cannabis?</p>
-                </p>
             </div>
 
             <p>Email → <a href="mailto:canapa@protonmail.com">canapa@protonmail.com</a></p>
