Fix about and contact pages on mobile

--- a/about.liquid
+++ b/about.liquid
@@ -9,7 +9,7 @@
 <body>
     {% include 'header' %}
     <main>
-        <div class="container">
+        <div class="about">
             <h2>Chi siamo?</h2>
 
             <p>Per dare una risposta alle attuali domande di consumo, coltivazione e mutevoli condizioni legali sulla
