Add persistance for theme

--- a/index.liquid
+++ b/index.liquid
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    {% include 'theme' %}
     <div id="main_wrapper">
         {% include 'header' %}
         <main class="homepage">
