--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -203,6 +203,7 @@ svg.icon {
     color: var(--fg);
     box-shadow: 0 2px 5px #0003;
     display: none;
+    width: 120px;
 }
 
 #lang_switch + ul a {
