--- a/_includes/menu.liquid
+++ b/_includes/menu.liquid
@@ -1,4 +1,11 @@
+{% if locale == "en" %}
+<a href="/en">Home</a>
+<a href="/en/about">About</a>
+<a href="/en/contact">Contact</a>
+<a href="/en/blog">Blog</a>
+{% else %}
 <a href="/">Home</a>
 <a href="/about">About</a>
 <a href="/contact">Contact</a>
 <a href="/blog">Blog</a>
+{% endif %}
