--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -5,7 +5,6 @@
 a {
     color: currentColor;
     &:hover {
-        color: $link-hover-color;
         text-decoration: underline;
     }
 }
@@ -15,17 +14,11 @@ a {
     outline-offset: 0.25rem;
 }
 
-body {
-    background: $bg-color;
-}
-
 blockquote {
-    & > :not(.twitter-embed) {
-        margin: 16px 0;
-        padding: 0 1em;
-        color: $link-hover-color;
-        border-left: 0.25em solid;
-    }
+    margin: 16px 0;
+    padding: 0 1em;
+    color: $link-hover-color;
+    border-left: 0.25em solid;
 }
 
 // Select all text wrapped in `` in markdown - generated a `code` tag without a language class
@@ -55,6 +48,7 @@ code:not([class*='language-']) {
     --fg: black;
     --bg2: white;
     --stroke-color: #ddd;
+    --date-color: rgba(0, 0, 0, 0.65);
 }
 
 @font-face {
@@ -119,6 +113,7 @@ body.dark {
     --fg: #ccc;
     --bg2: #2b2b2b;
     --stroke-color: #555;
+    --date-color: white;
 }
 svg.icon {
     display: block;
