--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -1,121 +1,77 @@
-/* inter-regular - latin */
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local(""), url("../assets/fonts/inter-v3-latin-regular.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("../assets/fonts/inter-v3-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
 @import 'global';
 
-ul {
-  list-style-type: circle;
+body {
+    background-color: var(--bg);
+    color: var(--fg);
+    display: flex;
+    flex-direction: column;
 }
 
-.blogpost-container {
-  min-height: 90vh;
-  display: flex;
-  flex-direction: column;
+.blog-container {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    flex: 1;
 }
 
 header {
-  font-weight: bold;
-  .name {
-    font-size: 64px;
-    line-height: 78px;
-    a {
-      text-decoration: none;
-    }
-  }
-  .post-title {
-    font-size: 40px;
-    line-height: 49px;
-    margin-top: 34px;
-  }
-  .post-date {
-    font-weight: 300;
-    line-height: 24px;
-    display: inline-block;
-  }
 }
 
 .content-container {
-  display: flex;
-  flex-direction: row;
-  flex: 1;
-  margin-top: 32px;
-  justify-content: space-between;
+    flex: 1;
 
-  main {
-    max-width: 700px;
-  }
+    main {
+        flex: 1;
+        .posts {
+            width: 60ch;
+            .post {
+                &-date {
+                    font-size: 12px;
+                    line-height: 20px;
+                    color: var(--date-color);
+                }
 
-  nav {
-    display: flex;
-    flex-direction: column;
-    .nav-item {
-      font-weight: bold;
-      font-size: 30px;
-      text-align: center;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-      }
+                &-title {
+                    font-size: 32px;
+                    line-height: 39px;
+                    a {
+                        text-decoration: none;
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+                }
+            }
+        }
     }
-    & > * + * {
-      margin-top: 18px;
-    }
-  }
-}
-
-footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  margin: 100px 0 32px 0;
-
-  .links {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 35ch;
-
-    .link {
-      .twitter-logo:hover {
-        color: $twitter-hover-color;
-        fill: $twitter-hover-color;
-      }
-      .email-logo:hover {
-        color: $email-hover-color;
-      }
-      .rss-logo:hover {
-        color: $rss-hover-color;
-      }
-      .github-logo:hover {
-        color: $github-hover-color;
-        fill: $github-hover-fill-color;
-      }
-    }
-  }
-
-  .home-link {
-    font-size: 24px;
-    text-decoration: none;
-  }
 }
 
 @media (max-width: $breakpoint-md) {
-  .content-container {
-    nav {
-      display: none;
+    header {
+        text-align: center;
+        .title {
+            font-size: 48px;
+        }
     }
-  }
-  footer {
-    flex-direction: column;
-    height: 100px;
-  }
+    .content-container {
+        flex-direction: column-reverse;
+        align-items: center;
+        margin-top: 0;
+        main {
+            margin-top: 2em;
+            .posts {
+                width: 80vw;
+            }
+        }
+    }
+}
+
+@media (max-width: $breakpoint-sm) {
+    .content-container {
+        main {
+            .posts {
+                width: 85vw;
+            }
+        }
+    }
 }
