--- a/en/blog.liquid
+++ b/en/blog.liquid
@@ -17,7 +17,7 @@
             <main>
                 <article class="flow | body-font | about-me">
                     <ul class="flow | posts">
-                        {% for post in collections.postsEnglish reversed %}
+                        {% for post in collections.posts reversed %}
                         <li class="post">
                             <span class="post-title">
                                 <a href="{{ post.url }}">{{ post.data.title }}</a>
@@ -43,6 +43,7 @@
                 </svg></a>
             {% include 'menu' %}
         </aside>
+    </div>
 </body>
 
 </html>
