Some color changes

--- a/en/index.liquid
+++ b/en/index.liquid
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="content">
                     <img width="150" height="150" class="logo" src="/assets/logo.svg" alt="">
-                    <h1>Canapa Coltivazione 🇮🇹</h1>
+                    <h1>Canapa Coltivazione</h1>
                     <p>Il piu grande gruppo telegram sulla <strong>coltivazione di cannabis</strong>. La piu grande
                         community di growers italiani di cannabis.</p>
                     <a href="https://t.me/p87726" target="_blank" class="tele-logo" title="Telegram">Join Telegram
