--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -144,12 +144,16 @@ svg.icon {
 .page-header a {
     padding: 10px 15px;
     display: flex;
-    --display: flex;
     align-items: center;
 }
 
 .page-header a:hover {
     background-color: #0001;
+}
+
+body.dark .page-header a:hover {
+    background-color: #000000;
+    color: wheat;
 }
 
 .page-header h3 {
@@ -183,7 +187,7 @@ svg.icon {
 #lang_switch {
     gap: 6px;
     width: 70px;
-    padding: 1.5px;
+    padding: 8px;
 }
 
 #lang_cont > ul {
