Apply special styles only on menu items

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -152,7 +152,7 @@ svg.icon {
     background-color: #0001;
 }
 
-body.dark .page-header a:hover {
+body.dark .page-header .menu-item:hover {
     background-color: #000000;
     color: wheat;
 }
