--- a/_includes/menu.liquid
+++ b/_includes/menu.liquid
@@ -1,11 +1,11 @@
 {% if locale == "en" %}
-<a href="/en">Home</a>
-<a href="/en/about">About</a>
-<a href="/en/contact">Contact</a>
-<a href="/en/blog">Blog</a>
+<a href="/en" class="menu-item">Home</a>
+<a href="/en/about" class="menu-item">About</a>
+<a href="/en/contact" class="menu-item">Contact</a>
+<a href="/en/blog" class="menu-item">Blog</a>
 {% else %}
 <a href="/">Home</a>
-<a href="/about">About</a>
-<a href="/contact">Contact</a>
-<a href="/blog">Blog</a>
+<a href="/about" class="menu-item">About</a>
+<a href="/contact" class="menu-item">Contact</a>
+<a href="/blog" class="menu-item">Blog</a>
 {% endif %}
