--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -1,3 +1,14 @@
+<script>
+    const onLangChange = (currentLang, pageUrl) => {
+        if (currentLang === 'en') {
+            const pathSuffix = pageUrl.split("/").slice(2).join("/")
+            window.location.href = new URL(window.location.protocol + "//" + window.location.host + "/" + pathSuffix);
+        }
+        else {
+            window.location.href = new URL(window.location.protocol + "//" + window.location.host + "/" + 'en' + "/" + pageUrl);
+        }
+    }
+</script>
 <header class="page-header">
     <div class="container">
         <a href="javascript:toggleSidebar()" class="icon-btn" title="Menu" id="menu_btn"><svg class="icon">
@@ -11,6 +22,7 @@
                 <use href="/assets/moon.svg#content" />
             </svg></a>
         <div id="lang_cont">
+            {{page.url}}
             <a href="javascript:;" id="lang_switch" title="Change language">
                 {% if locale == "en" %}
                 <img width="24" height="24" src="/assets/english.png" alt="English" />
@@ -21,14 +33,27 @@
                 {% endif %}
             </a>
             <ul>
+                {% if locale == "en" %}
                 <li>
-                    <a href="/en"><img width="24" height="24" src="/assets/english.png" alt="English" />
+                    <a><img width="24" height="24" src="/assets/english.png" alt="English" />
                         English</a>
                 </li>
                 <li>
-                    <a href="/"><img width="24" height="24" src="/assets/italy.png" alt="Italian" />
+                    <a href="javascript:onLangChange('en', '{{page.url}}');"><img width="24" height="24"
+                            src="/assets/italy.png" alt="Italian" />
                         Italian</a>
                 </li>
+                {% else %}
+                <li>
+                    <a href="javascript:onLangChange('it', '{{page.url}}');"><img width="24" height="24"
+                            src="/assets/english.png" alt="English" />
+                        English</a>
+                </li>
+                <li>
+                    <a><img width="24" height="24" src="/assets/italy.png" alt="Italian" />
+                        Italian</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </div>
