Full size hover

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -155,6 +155,7 @@ svg.icon {
 body.dark .page-header .menu-item:hover {
     background-color: #000000;
     color: wheat;
+    padding: 20px 15px;
 }
 
 .page-header h3 {
