--- a/_includes/menu.liquid
+++ b/_includes/menu.liquid
@@ -4,7 +4,7 @@
 <a href="/en/contact" class="menu-item">Contact</a>
 <a href="/en/blog" class="menu-item">Blog</a>
 {% else %}
-<a href="/">Home</a>
+<a href="/" class="menu-item">Home</a>
 <a href="/about" class="menu-item">About</a>
 <a href="/contact" class="menu-item">Contact</a>
 <a href="/blog" class="menu-item">Blog</a>
