--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -196,7 +196,7 @@ body.dark .page-header .menu-item:hover {
 
 #lang_switch {
     gap: 6px;
-    padding: 8px;
+    padding: 16px 8px;
 }
 
 #lang_cont > ul {
