--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/assets/logo.svg" type="image/x-icon">
 
 <title>{{- metatitle -}}</title>
 
