--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -34,7 +34,7 @@
             <ul>
                 {% if locale == "en" %}
                 <li>
-                    <a><img src="/assets/gb.svg" alt="English" class="flag-img flag-img-english">English</a>
+                    <a href="javascript:"><img src="/assets/gb.svg" alt="English" class="flag-img flag-img-english">English</a>
                 </li>
                 <li>
                     <a href="javascript:onLangChange('en', '{{page.url}}');"><img src="/assets/it.svg"
@@ -46,7 +46,7 @@
                             class="flag-img flag-img-english">English</a>
                 </li>
                 <li>
-                    <a><img src="/assets/it.svg" alt="Italian" class="flag-img flag-img-italy">Italian</a>
+                    <a href="javascript:"><img src="/assets/it.svg" alt="Italian" class="flag-img flag-img-italy">Italian</a>
                 </li>
                 {% endif %}
             </ul>
