--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -1,11 +1,14 @@
 <script>
-    const onLangChange = (currentLang, pageUrl) => {
-        if (currentLang === 'en') {
-            const pathSuffix = pageUrl.split("/").slice(2).join("/")
-            window.location.href = new URL(window.location.protocol + "//" + window.location.host + "/" + pathSuffix);
+    const onLangChange = (toLang, pageUrl) => {
+        
+        if (pageUrl.includes("en"))
+            pageUrl = pageUrl.split("en").slice(1)
+
+        if (toLang === "en") {
+            window.location.href = new URL(window.location.protocol + "//" + window.location.host + "/en" + pageUrl);
         }
         else {
-            window.location.href = new URL(window.location.protocol + "//" + window.location.host + "/" + 'en' + "/" + pageUrl);
+            window.location.href = new URL(window.location.protocol + "//" + window.location.host + pageUrl);
         }
     }
 </script>
@@ -25,10 +28,8 @@
             <a href="javascript:;" id="lang_switch" title="Change language">
                 {% if locale == "en" %}
                 <img src="/assets/gb.svg" alt="English" class="flag-img flag-img-english" />
-                <span>EN</span>
                 {% else %}
                 <img src="/assets/it.svg" alt="Italian" class="flag-img flag-img-italy" />
-                <span>IT</span>
                 {% endif %}
             </a>
             <ul>
@@ -37,12 +38,12 @@
                     <a href="javascript:"><img src="/assets/gb.svg" alt="English" class="flag-img flag-img-english">English</a>
                 </li>
                 <li>
-                    <a href="javascript:onLangChange('en', '{{page.url}}');"><img src="/assets/it.svg"
+                    <a href="javascript:onLangChange('it', '{{page.url}}');"><img src="/assets/it.svg"
                             class="flag-img flag-img-italy" alt="Italian">Italian</a>
                 </li>
                 {% else %}
                 <li>
-                    <a href="javascript:onLangChange('it', '{{page.url}}');"><img src="/assets/gb.svg" alt="English"
+                    <a href="javascript:onLangChange('en', '{{page.url}}');"><img src="/assets/gb.svg" alt="English"
                             class="flag-img flag-img-english">English</a>
                 </li>
                 <li>
