--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,8 @@
 <meta property="og:url" content="{{ page.url | prepend: site.baseurl }}">
 <meta property="og:image" content="/assets/avatar.png">
 <meta property="og:description" content="{{- metadesc -}}">
+<meta name="robots" content="noindex">
+
 
 <link rel="preload" href="/assets/Graphik-Regular-Web.woff2" as="font" type="font/woff2" crossorigin />
 <script src="/assets/main.js" defer></script>
