Change design of  blog page

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -35,7 +35,7 @@
             <ul>
                 {% if locale == "en" %}
                 <li>
-                    <a href="javascript:"><img src="/assets/gb.svg" alt="English" class="flag-img flag-img-english">English</a>
+                    <a href=""><img src="/assets/gb.svg" alt="English" class="flag-img flag-img-english">English</a>
                 </li>
                 <li>
                     <a href="javascript:onLangChange('it', '{{page.url}}');"><img src="/assets/it.svg"
@@ -47,7 +47,7 @@
                             class="flag-img flag-img-english">English</a>
                 </li>
                 <li>
-                    <a href="javascript:"><img src="/assets/it.svg" alt="Italian" class="flag-img flag-img-italy">Italian</a>
+                    <a href=""><img src="/assets/it.svg" alt="Italian" class="flag-img flag-img-italy">Italian</a>
                 </li>
                 {% endif %}
             </ul>
