--- a/blog.liquid
+++ b/blog.liquid
@@ -10,9 +10,7 @@
     {% include 'theme' %}
     {% include 'header' %}
     <div class="blog-container">
-        <header>
-            <h1>Blog</h1>
-        </header>
+        <h1 class="title">BLOG POSTS</h1>
         <div class="content-container">
             <main>
                 <article class="flow | body-font | about-me">
@@ -22,7 +20,10 @@
                             <span class="post-title">
                                 <a href="{{ post.url }}">{{ post.data.title }}</a>
                             </span>
-                            <div class="lowercase | post-date">
+                            <span class="post-snippet">
+                                <a href="{{ post.url }}">{{ post.data.snippet }}</a>
+                            </span>
+                            <div class="post-date">
                                 {{ post.date | date: '%b %Y' }}
                             </div>
                         </li>
