--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -2,10 +2,20 @@
 @import 'variables';
 @import 'utilities';
 
+html {
+    height: 100%;
+}
+
 a {
     color: currentColor;
+    text-decoration: none;
     &:hover {
-        text-decoration: underline;
+        text-decoration: none;
+    }
+    display: inline-block;
+
+    &[href]:focus {
+        outline: none;
     }
 }
 
@@ -17,38 +27,7 @@ a {
 blockquote {
     margin: 16px 0;
     padding: 0 1em;
-    color: $link-hover-color;
     border-left: 0.25em solid;
-}
-
-// Select all text wrapped in `` in markdown - generated a `code` tag without a language class
-code:not([class*='language-']) {
-    background-color: #f2f2f2;
-    color: #1c402a;
-    padding: 2px;
-}
-
-// visible only to screen readers
-.visually-hidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: auto;
-    margin: 0;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-    white-space: nowrap;
-}
-
-:root {
-    --accent: #2d9cdb;
-    --grey: #444;
-    --bg: white;
-    --fg: black;
-    --bg2: white;
-    --stroke-color: #ddd;
-    --date-color: rgba(0, 0, 0, 0.65);
 }
 
 @font-face {
@@ -73,39 +52,22 @@ code:not([class*='language-']) {
     display: none;
 }
 
-.grow {
-    flex-grow: 1;
-}
-
-ul {
-    list-style-type: none;
-}
-
-a,
-a:hover {
-    color: inherit;
-    text-decoration: none;
-}
-
-a {
-    display: inline-block;
-}
-
-a[href]:focus {
-    outline: none;
-}
-
-html {
-    scroll-behavior: smooth;
-    height: 100%;
-}
-
 body {
     font-family: 'Graphik Regular', sans-serif;
     line-height: 1.65;
     min-height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+:root {
+    --accent: #2d9cdb;
+    --grey: #444;
+    --bg: white;
+    --fg: black;
+    --bg2: white;
+    --stroke-color: #ddd;
+    --date-color: rgba(0, 0, 0, 0.65);
 }
 
 body.dark {
@@ -115,11 +77,13 @@ body.dark {
     --stroke-color: #555;
     --date-color: white;
 }
+
 svg.icon {
     display: block;
     height: 1em;
     width: 1em;
 }
+
 #main_wrapper {
     flex-grow: 1;
     display: flex;
@@ -161,7 +125,6 @@ body.dark .page-header .menu-item:hover {
     color: wheat;
     padding: 18px 15px;
 }
-
 
 .page-header h3 {
     margin: 0;
@@ -348,65 +311,6 @@ h5,
 
 small {
     font-size: 0.8em;
-}
-
-/* backlinks */
-
-.backlinks-title {
-    margin-bottom: 0;
-}
-
-.backlinks-container {
-    margin-top: 0;
-}
-
-.backlinks-default {
-    margin-top: 0;
-    margin-left: 16px;
-    color: var(--grey);
-}
-
-.backlink__preview {
-    display: none;
-    position: absolute;
-    bottom: 8px;
-    left: 100%;
-    background-color: #fff;
-    border-radius: 4px;
-    padding: 4px;
-    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
-    width: 348px;
-    max-height: 148px;
-    overflow: hidden;
-}
-
-.backlink__preview::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    background: linear-gradient(transparent, white);
-    width: 100%;
-    height: 24px;
-}
-
-.backlink__preview h1 {
-    font-size: 1.2rem;
-    margin-top: 8px;
-    font-weight: bold;
-}
-
-.backlink {
-    width: fit-content;
-    position: relative;
-}
-
-.backlink:hover {
-    padding-right: 4px;
-    /* Allow mouse to travel between link and modal */
-}
-
-.backlink:hover .backlink__preview {
-    display: block;
 }
 
 #sidebar {
