--- a/blog.liquid
+++ b/blog.liquid
@@ -20,22 +20,21 @@
                             <span class="post-title">
                                 <a href="{{ post.url }}">{{ post.data.title }}</a>
                             </span>
-                            <div>
-                                <div>
+                            <div class="blog-content">
+                                <div class="blog-content-right">
                                     <span class="post-snippet">
                                         <a href="{{ post.url }}">{{ post.data.snippet }}</a>
                                     </span>
                                     <div class="post-tags">
-                                        <a href="{{ post.url }}">#tag-1</a>
-                                        <a href="{{ post.url }}">#tag-2</a>
-                                        <a href="{{ post.url }}">#tag-3</a>
-                                        <a href="{{ post.url }}">#tag-4</a>
+                                        {% for tag in post.data.tags %}
+                                        <a href="/tags/{{tag}}" class="tag">#{{tag}}</a>
+                                        {% endfor %}
                                     </div>
                                     <div class="post-date">
                                         {{ post.date | date: '%b %Y' }}
                                     </div>
                                 </div>
-                                <div>
+                                <div class="blog-image">
                                     <img src="/assets/{{ post.data.imagePath }}" alt="{{ post.data.title }}">
                                 </div>
                             </div>
