--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -43,6 +43,16 @@ body {
                         }
                     }
                 }
+
+                .blog-content {
+                    display: grid;
+                    grid-template-columns: 1fr 200px;
+                    margin-top: 0.5rem;
+                }
+                .blog-content-right {
+                    display: grid;
+                    grid-template-rows: 1fr 1fr 1fr;
+                }
             }
         }
     }
@@ -110,4 +120,20 @@ body {
             }
         }
     }
+}
+
+.tag {
+    --tw-text-opacity: 1;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    color: #111;
+    background: #69caff;
+    display: inline-block;
+    font-size: 0.75rem;
+    font-weight: 700;
+    line-height: 1rem;
+    margin-bottom: 0.5rem;
+    margin-right: 0.5rem;
+    padding: 0.5rem 1rem;
+    text-transform: lowercase;
 }
