--- a/_includes/blogpost.liquid
+++ b/_includes/blogpost.liquid
@@ -11,6 +11,7 @@
     {% include 'header' %}
     <div class="blog-container">
         <header>
+            <h1>{{title}}</h1>
         </header>
         <div class="content-container">
             <main>
