--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -23,20 +23,23 @@ body {
     flex: 1;
 
     main {
-        margin: 0 2rem 2rem;
+        margin-left: 2rem;
         .posts {
             width: 60ch;
             .post {
                 &-date {
-                    font-size: 12px;
-                    line-height: 20px;
                     color: var(--date-color);
                 }
 
                 &-title {
                     font-size: 32px;
                     line-height: 39px;
+                    margin: unset;
+                    overflow: hidden;
                     a {
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
                         text-decoration: none;
                         &:hover {
                             text-decoration: underline;
@@ -44,86 +47,57 @@ body {
                     }
                 }
 
-                .blog-content {
-                    display: grid;
-                    grid-template-columns: 1fr 200px;
-                    margin-top: 0.5rem;
+                &-snippet {
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
                 }
-                .blog-content-right {
-                    display: grid;
-                    grid-template-rows: 1fr 1fr 1fr;
-                }
-            }
-        }
-    }
 
-    nav {
-        display: flex;
-        flex-direction: column;
-        .nav-item {
-            font-weight: bold;
-            font-size: 30px;
-            text-align: center;
-            text-decoration: none;
-            &:hover {
-                text-decoration: underline;
+                &-header {
+                    display: grid;
+                    grid-template-columns: 200px 1fr;
+                    gap: 2rem;
+                }
+
+                &-footer {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin-top: 1rem;
+                }
             }
-        }
-        & > * + * {
-            margin-top: 18px;
         }
     }
 }
 
 @media (max-width: $breakpoint-md) {
-    header {
-        text-align: center;
-        .title {
-            font-size: 48px;
-        }
-    }
-    .content-container {
-        flex-direction: column-reverse;
-        align-items: center;
-        margin-top: 0;
-        main {
-            margin-top: 2em;
-            .posts {
-                width: 80vw;
+    .content-container main {
+        .posts {
+            width: 30ch;
+            .post {
+                &-title {
+                    font-size: 16px;
+                    line-height: 20px;
+                }
+                &-header {
+                    display: grid;
+                    grid-template-columns: 100px 1fr;
+                    gap: 0.5rem;
+                }
+                &-footer {
+                    flex-direction: column;
+                    align-items: flex-start;
+                }
             }
         }
-        nav {
-            position: unset;
-            width: 80vw;
-            flex-direction: row;
-            justify-content: space-between;
-            .nav-item {
-                margin-top: 0;
-                font-size: 28px;
-            }
-        }
-    }
-
-    footer {
-        position: static;
-        align-self: center;
-        margin-top: 2em;
-        margin-bottom: 1.5em;
     }
 }
 
 @media (max-width: $breakpoint-sm) {
-    .content-container {
-        main {
-            .posts {
-                width: 85vw;
-            }
-        }
-    }
 }
 
 .tag {
-    --tw-text-opacity: 1;
     border: 1px solid transparent;
     border-radius: 0.25rem;
     color: #111;
