--- a/tag-pages.liquid
+++ b/tag-pages.liquid
@@ -7,19 +7,33 @@ pagination:
     - posts
 layout: tagged-posts.liquid    
 renderData:
-  title: posts tagged under "{{ tag }}"
+  title: Posts Tagged Under "{{ tag }}"
 permalink: /tags/{{ tag }}/
 ---
 
-<ol class="posts">
-  {% for post in collections[tag] reversed %}
-    <li class="post">
-      <span class="post-title">
-        <a href="{{ post.url | url }}">{{ post.data.title }}</a>
-      </span>
-      <div class="post-date">
-        {{ post.date | date: '%b %Y' | downcase }}
+<ul class="flow | posts">
+  {% for post in collections.posts reversed %}
+  <li class="post">
+      <div class="post-header">
+          <div class="post-header-left">
+              <div class="blog-image">
+                  <img src="/assets/{{ post.data.imagePath }}" alt="{{ post.data.title }}">
+              </div>
+          </div>
+          <div class="post-header-right">
+              <h2 class="post-title">
+                  <a href="{{ post.url }}">{{ post.data.title }}</a>
+              </h2>
+              <span class="post-snippet">
+                  <a href="{{ post.url }}">{{ post.data.snippet }}</a>
+              </span>
+          </div>
       </div>
-    </li>
+      <div class="post-footer">
+          <div class="post-date">
+              {{ post.date | date: '%B %e, %Y' }}
+          </div>
+      </div>
+  </li>
   {% endfor %}
-</ol>
+</ul>
