--- a/blog.liquid
+++ b/blog.liquid
@@ -10,7 +10,7 @@
     {% include 'theme' %}
     {% include 'header' %}
     <div class="blog-container">
-        <h1 class="title">BLOG POSTS</h1>
+        <h1 class="title">Blog Posts</h1>
         <div class="content-container">
             <main>
                 <ul class="flow | posts">
