--- a/tag-pages.liquid
+++ b/tag-pages.liquid
@@ -12,28 +12,33 @@ permalink: /tags/{{ tag }}/
 ---
 
 <ul class="flow | posts">
-  {% for post in collections.posts reversed %}
-  <li class="post">
-      <div class="post-header">
-          <div class="post-header-left">
-              <div class="blog-image">
-                  <img src="/assets/{{ post.data.imagePath }}" alt="{{ post.data.title }}">
-              </div>
-          </div>
-          <div class="post-header-right">
-              <h2 class="post-title">
-                  <a href="{{ post.url }}">{{ post.data.title }}</a>
-              </h2>
-              <span class="post-snippet">
-                  <a href="{{ post.url }}">{{ post.data.snippet }}</a>
-              </span>
-          </div>
-      </div>
-      <div class="post-footer">
-          <div class="post-date">
-              {{ post.date | date: '%B %e, %Y' }}
-          </div>
-      </div>
-  </li>
-  {% endfor %}
+    {% for post in collections.posts reversed %}
+    <li class="post">
+        <div class="post-header">
+            <div class="post-header-left">
+                <div class="blog-image">
+                    <img src="/assets/{{ post.data.imagePath }}" alt="{{ post.data.title }}">
+                </div>
+            </div>
+            <div class="post-header-right">
+                <h2 class="post-title">
+                    <a href="{{ post.url }}">{{ post.data.title }}</a>
+                </h2>
+                <span class="post-snippet">
+                    <a href="{{ post.url }}">{{ post.data.snippet }}</a>
+                </span>
+                <div class="post-footer">
+                    <div class="post-tags">
+                        {% for tag in post.data.tags %}
+                        <a href="/tags/{{tag}}" class="tag">#{{tag}}</a>
+                        {% endfor %}
+                    </div>
+                    <div class="post-date">
+                        {{ post.date | date: '%B %e, %Y' }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </li>
+    {% endfor %}
 </ul>
