--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,7 +2,7 @@
 $link-hover-color: #9b362a;
 
 // Breakpoints
-$breakpoint-sm: '640px';
-$breakpoint-md: '768px';
-$breakpoint-lg: '1024px';
-$breakpoint-xl: '1280px';
+$breakpoint-sm: "640px";
+$breakpoint-md: "768px";
+$breakpoint-lg: "1024px";
+$breakpoint-xl: "1280px";
