--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -1,441 +1,438 @@
-@import 'global';
+@import "global";
 
 body {
-    background-color: var(--bg);
-    color: var(--fg);
-    display: flex;
-    flex-direction: column;
+  background-color: var(--bg);
+  color: var(--fg);
+  display: flex;
+  flex-direction: column;
 }
-.container{
-    padding: 0px 20px;
+.container {
+  padding: 0px 20px;
 }
 
 .blog-container {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .title {
-    margin: 2rem;
-    font-size: 24px;
-    font-weight: normal;
+  margin: 2rem;
+  font-size: 24px;
+  font-weight: normal;
 }
 
 .content-container {
-    flex: 1;
+  flex: 1;
 
-    main {
-        margin-left: 2rem;
-        .posts {
-            width: 70vw;
-            .post {
-                &-date {
-                    color: var(--date-color);
-                }
-
-                &-title {
-                    font-size: 32px;
-                    line-height: 39px;
-                    margin: unset;
-                    overflow: hidden;
-                    a {
-                        display: -webkit-box;
-                        -webkit-line-clamp: 2;
-                        -webkit-box-orient: vertical;
-                        text-decoration: none;
-                        &:hover {
-                            text-decoration: underline;
-                        }
-                    }
-                }
-
-                &-snippet {
-                    display: -webkit-box;
-                    -webkit-line-clamp: 3;
-                    -webkit-box-orient: vertical;
-                    overflow: hidden;
-                }
-
-                &-header {
-                    display: grid;
-                    grid-template-columns: 200px 1fr;
-                    gap: 2rem;
-                    &-right {
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: space-evenly;
-                    }
-                }
-
-                &-footer {
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                    margin-top: 1rem;
-                }
-            }
+  main {
+    margin-left: 2rem;
+    .posts {
+      width: 70vw;
+      .post {
+        &-date {
+          color: var(--date-color);
         }
+
+        &-title {
+          font-size: 32px;
+          line-height: 39px;
+          margin: unset;
+          overflow: hidden;
+          a {
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            text-decoration: none;
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+        }
+
+        &-snippet {
+          display: -webkit-box;
+          -webkit-line-clamp: 3;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+        }
+
+        &-header {
+          display: grid;
+          grid-template-columns: 200px 1fr;
+          gap: 2rem;
+          &-right {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+          }
+        }
+
+        &-footer {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          margin-top: 1rem;
+        }
+      }
     }
+  }
 }
 
-//Jake styles goes here 
-.searching{
-    height: 30px;
-    width: 40px;
-    margin-left: 5px;
-    color: var(--date-color) !important;
+//Jake styles goes here
+.searching {
+  height: 30px;
+  width: 40px;
+  margin-left: 5px;
+  color: var(--date-color) !important;
 }
-.searchbar{
-    border-radius: 5px;
-    padding: 8px;
-    border-width: 0px;
-    color: var(--date-color);
-    background-color: #D9D9D9;
+.searchbar {
+  border-radius: 5px;
+  padding: 8px;
+  border-width: 0px;
+  color: var(--date-color);
+  background-color: #d9d9d9;
 }
-.detail__main{
-    color: var(--date-color);
-    padding: 0px 20px;
-    display: grid;
-    background-color: var(--bg);
-    .page_title{
+.detail__main {
+  color: var(--date-color);
+  padding: 0px 20px;
+  display: grid;
+  background-color: var(--bg);
+  .page_title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    h4 {
+      font-size: 48px;
+    }
+  }
+  .description__column {
+    display: flex;
+    width: 100%;
+    gap: 15px;
+    height: 15px;
+    align-items: center;
+    padding: 10px 0px;
+    img {
+      padding: 5px;
+      border: 1px solid white;
+      background-color: white;
+    }
+    h6 {
+      font-size: 24px;
+    }
+    .profile {
+      height: 48px;
+      width: 48px;
+      border-radius: 50%;
+      color: var(--date-color);
+      background-color: var(--bg);
+    }
+  }
+  .mimage {
+    width: 100%;
+    height: 400px;
+    margin-top: 15px;
+    background-image: url("../assets/blogImages/blogimage.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center bottom;
+  }
+  .body__text {
+    margin-top: 20px;
+  }
+  .tags__cont {
+    display: flex;
+    gap: 15px;
+    margin-top: 15px;
+    color: var(--bg);
+    font-size: 20px;
+    .tag {
+      padding: 5px 15px;
+      border-radius: 5px;
+      color: var(--bg);
+      width: 7rem;
+      text-align: center;
+      font-size: 14px;
+    }
+  }
+  .tags__cont > :first-child {
+    background-color: #5a8622;
+  }
+  .tags__cont > :nth-child(3) {
+    background-color: #046a71;
+  }
+  .tags__cont > :nth-child(2) {
+    background-color: #9d6666;
+  }
+  .view_all {
+    padding: 30px 0px 0px 0px;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    a {
+      font-size: 24px;
+      color: #52b641;
+    }
+    .hr {
+      border: 1px solid var(--date-color);
+      width: 100%;
+    }
+  }
+  .corelated__articles {
+    display: flex;
+    flex-direction: column;
+    color: var(--fg);
+    h4 {
+      font-size: 48px;
+    }
+    hr {
+      width: 100%;
+    }
+    .corelated__container {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      // height: 500px;
+      row-gap: 20px;
+      // padding: 10px 0px;
+      .right {
+        // background-image: url("../assets/blogImages/blogimage.jpg");
+        // background-size: cover;
+        // margin-left: 10px;
+        // display: flex;
+        // justify-content: center;
+        // align-items: flex-end;
+        // color: white;
+        margin-bottom: 70px;
+        img {
+          height: 80%;
+          width: 100%;
+        }
+        p {
+          position: absolute;
+          bottom: 100px;
+          // left: 50%;
+          right: 40%;
+          color: var(--bg);
+        }
+        .abs {
+          position: relative;
+          p {
+            position: absolute;
+            right: 30%;
+            bottom: 0px;
+          }
+        }
+      }
+      .left {
         display: flex;
         justify-content: space-between;
-        align-items: center;
-        h4{
-            font-size: 48px;
-        }
-    }
-    .description__column{
-        display: flex;
-        width: 100%;
-        gap: 15px;
-        height: 15px;
-        align-items: center;
-        padding: 10px 0px;
-        img{
-            padding: 5px;
-            border: 1px solid white;
-            background-color: white;
-        }
-        h6{
-            font-size: 24px;
-        }
-        .profile{
-            height: 48px;
-            width: 48px;
-            border-radius: 50%;
-            color: var(--date-color);
-            background-color: var(--bg);
-        }
-    }
-    .mimage{
-        width: 100%;
-        height: 400px;
-        margin-top: 15px;
-        background-image: url("../assets/blogImages/blogimage.jpg") ;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center bottom;
-    }
-    .body__text{
-        margin-top: 20px;
-    }
-    .tags__cont{
-        display: flex;
-        gap: 15px;
-        margin-top: 15px;
-        color: var(--bg);
-        font-size: 20px ;
-        .tag{
-            padding: 5px 15px;
-            border-radius: 5px;
-            color: var(--bg);
-            width: 7rem;
-            text-align: center;
-            font-size: 14px;
-        }
-        
-    }
-    .tags__cont >:first-child{
-        background-color: #5A8622;
-    }
-    .tags__cont>:nth-child(3){
-        background-color: #046A71;
-    }
-    .tags__cont>:nth-child(2){
-        background-color: #9D6666;
-    }
-    .view_all{
-        padding: 30px 0px 0px 0px;
-        display: flex;
-        gap: 10px;
-        flex-direction: column;
-        a{
-            font-size: 24px;
-            color: #52B641;
-        }
-        .hr{
-            border: 1px solid var(--date-color);
-            width: 100%;
-        }
-    }
-    .corelated__articles{
-        display: flex;
         flex-direction: column;
         color: var(--fg);
-        h4{
-            font-size: 48px;
+        h5 {
+          font-weight: 800;
+          font-size: 40px;
         }
-        hr{
-            width: 100%;
+        p:nth-child(1) {
+          font-size: 32px;
         }
-        .corelated__container{
-            display: grid;
-            grid-template-columns: 2fr 1fr;
-            // height: 500px;
-            row-gap: 20px;
-            // padding: 10px 0px;
-            .right{
-                // background-image: url("../assets/blogImages/blogimage.jpg");
-                // background-size: cover;
-                // margin-left: 10px;
-                // display: flex;
-                // justify-content: center;
-                // align-items: flex-end;
-                // color: white;
-                margin-bottom: 70px;
-                img{
-                    height: 80%;
-                    width: 100%;
-                    
-                }
-                p{
-                    position: absolute;
-                    bottom: 100px;
-                    // left: 50%;
-                    right: 40%;
-                    color: var(--bg);
-                }
-                .abs{
-                    position: relative;
-                    p{
-                        position: absolute;
-                        right: 30%;
-                        bottom: 0px;
-                    }
-                }
-                
-            }
-            .left{
-                display: flex;
-                justify-content: space-between;
-                flex-direction: column;
-                color: var(--fg);
-                h5{
-                    font-weight: 800;
-                    font-size: 40px;
-                }
-                p:nth-child(1){
-                    font-size: 32px;
-                }
-                .tag{
-                        background-color: #046A71;
-                        padding: 2px 15px;
-                        border-radius: 5px;
-                        width: 5rem;
-                        color: var(--bg);
-                        padding: 5px 15px;
-                        width: 7rem;
-                        text-align: center;
-                        font-size: 14px;
-                }
-            }
-           
+        .tag {
+          background-color: #046a71;
+          padding: 2px 15px;
+          border-radius: 5px;
+          width: 5rem;
+          color: var(--bg);
+          padding: 5px 15px;
+          width: 7rem;
+          text-align: center;
+          font-size: 14px;
         }
+      }
     }
+  }
 }
 
 @media (max-width: $breakpoint-md) {
   .page_title h4 {
-        font-size: 24px !important;
-  }  
+    font-size: 24px !important;
+  }
   .description__column {
-    h6{font-size: 16px !important;}
-  }
-  .view_all{
-    a{
-        font-size: 16px !important;
-        
+    h6 {
+      font-size: 16px !important;
     }
   }
-  .corelated__articles{
-    h4{
-        font-size: 32px !important;
+  .view_all {
+    a {
+      font-size: 16px !important;
     }
   }
-  .corelated__container{
+  .corelated__articles {
+    h4 {
+      font-size: 32px !important;
+    }
+  }
+  .corelated__container {
     // margin: 20px 0px;
     max-height: 300px;
-
   }
-  .left{
-    h5{
-        font-size: 32px !important;
-        justify-content: start !important;
+  .left {
+    h5 {
+      font-size: 32px !important;
+      justify-content: start !important;
     }
-    p:nth-child(1){
-        font-size: 24px;
+    p:nth-child(1) {
+      font-size: 24px;
     }
   }
 }
 
 @media (max-width: $breakpoint-sm) {
-    .tags__cont{
-        gap: 2px;
-        .tag{
-            padding: 3px 7px;
-            border-radius: 5px;
-            color: var(--bg);
-            width: 4rem !important;
-            text-align: center;
-            font-size: 10px !important;
-        }
-    }
-    .page_title h4{
-        font-size: 18px !important;
-    }
-    .description__column {
-        gap:5px !important;
-        h6{ font-size: 8px !important;}
-        
-    }
-.searchbar, .searching{
-    display: none;
-}
-.view_all{
-    a{
-        font-size: 18px !important;
-    }
-}
-.corelated__articles{
-    h4{
-        font-size: 18px !important;
+  .tags__cont {
+    gap: 2px;
+    .tag {
+      padding: 3px 7px;
+      border-radius: 5px;
+      color: var(--bg);
+      width: 4rem !important;
+      text-align: center;
+      font-size: 10px !important;
     }
   }
-.detail__main h4{
+  .page_title h4 {
+    font-size: 18px !important;
+  }
+  .description__column {
+    gap: 5px !important;
+    h6 {
+      font-size: 8px !important;
+    }
+  }
+  .searchbar,
+  .searching {
+    display: none;
+  }
+  .view_all {
+    a {
+      font-size: 18px !important;
+    }
+  }
+  .corelated__articles {
+    h4 {
+      font-size: 18px !important;
+    }
+  }
+  .detail__main h4 {
     font-size: 18px;
-}
-.description__column{
+  }
+  .description__column {
     gap: 2px;
     padding: 3px 0px;
-}
-.corelated__container{
-// height: 100px;
-// row-gap: 10px;
-justify-content: start;
-.left{
-    justify-content: flex-start !important;
-    gap: 0px;
-    h5{font-size: 18px !important;}
-    margin-top: 0px !important;
-    p{
+  }
+  .corelated__container {
+    // height: 100px;
+    // row-gap: 10px;
+    justify-content: start;
+    .left {
+      justify-content: flex-start !important;
+      gap: 0px;
+      h5 {
+        font-size: 18px !important;
+      }
+      margin-top: 0px !important;
+      p {
         font-size: 16px;
-        
-    
-    }
-    p:nth-child(1){
+      }
+      p:nth-child(1) {
         font-size: 14px !important;
+      }
     }
-}
 
-.right{
-    margin-top: 50px;
-    margin-left: 0px;
-    // border: 1px solid red;
-    .abs{
+    .right {
+      margin-top: 50px;
+      margin-left: 0px;
+      // border: 1px solid red;
+      .abs {
         height: 100%;
         margin-bottom: 0px;
         padding-bottom: 0px;
-    }
-    p{
+      }
+      p {
         font-size: 12px !important;
+      }
     }
-}
-}
-
+  }
 }
 
 @media (max-width: 360px) {
-    .abs{
-        p{
-            font-size: 8px !important;
-            right: 10px !important;
-            top: 60%;
-        }
+  .abs {
+    p {
+      font-size: 8px !important;
+      right: 10px !important;
+      top: 60%;
     }
+  }
 }
 @media (max-width: $breakpoint-md) {
-    .content-container main {
-        .posts {
-            width: 30ch;
-            .post {
-                &-title {
-                    font-size: 16px;
-                    line-height: 20px;
-                }
-                &-header {
-                    display: grid;
-                    grid-template-columns: 100px 1fr;
-                    gap: 0.5rem;
-                }
-                &-footer {
-                    flex-direction: column;
-                    align-items: flex-start;
-                }
-            }
+  .content-container main {
+    .posts {
+      width: 30ch;
+      .post {
+        &-title {
+          font-size: 16px;
+          line-height: 20px;
         }
+        &-header {
+          display: grid;
+          grid-template-columns: 100px 1fr;
+          gap: 0.5rem;
+        }
+        &-footer {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+      }
     }
+  }
 }
 
 @media (max-width: $breakpoint-sm) {
-    .blog-image {
-        display: none;
-    }
-    .content-container main {
-        .posts {
-            width: 30ch;
-            .post {
-                &-title {
-                    font-size: 20px;
-                    line-height: 30px;
-                }
-                &-header {
-                    grid-template-columns: 1fr;
-                }
-                &-date {
-                    font-size: 11px;
-                }
-            }
+  .blog-image {
+    display: none;
+  }
+  .content-container main {
+    .posts {
+      width: 30ch;
+      .post {
+        &-title {
+          font-size: 20px;
+          line-height: 30px;
         }
+        &-header {
+          grid-template-columns: 1fr;
+        }
+        &-date {
+          font-size: 11px;
+        }
+      }
     }
+  }
 }
 
 .tag {
-    border: 1px solid transparent;
-    border-radius: 0.25rem;
-    color: #111;
-    background: #69caff;
-    display: inline-block;
-    font-size: 0.75rem;
-    font-weight: 700;
-    line-height: 1rem;
-    margin-bottom: 0.5rem;
-    margin-right: 0.5rem;
-    padding: 0.5rem 1rem;
-    text-transform: lowercase;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  color: #111;
+  background: #69caff;
+  display: inline-block;
+  font-size: 0.75rem;
+  font-weight: 700;
+  line-height: 1rem;
+  margin-bottom: 0.5rem;
+  margin-right: 0.5rem;
+  padding: 0.5rem 1rem;
+  text-transform: lowercase;
 }
 
 .page-footer {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
