--- a/styles/homepage.scss
+++ b/styles/homepage.scss
@@ -1,7 +1,7 @@
-@import 'global';
+@import "global";
 
 .content {
-    display: flex;
-    align-items: center;
-    flex-direction: column
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
