--- a/blog.liquid
+++ b/blog.liquid
@@ -1,64 +1,94 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 
 <head>
-    {% include 'head.html' %}
-    <link rel="stylesheet" href="/styles/blog.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="shortcut icon" href="/assets/logo.svg" type="image/x-icon">
+
+    <meta name="description" content="Community telegram sulla coltivazione della cannabis.">
+    <meta property="og:title" content="Canapa Coltivazione">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="/blog/">
+    <meta property="og:image" content="/assets/avatar.png">
+    <meta property="og:description" content="Community telegram sulla coltivazione della cannabis.">
+    <meta name="robots" content="noindex">
+
+    <link rel="preload" href="/assets/Graphik-Regular-Web.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="/assets/main.js" defer></script>
+    <link rel="stylesheet" href="/styles/about.css">
 </head>
 
 <body>
-    {% include 'theme' %}
-    {% include 'header' %}
-    <div class="blog-container">
-        <h1 class="title">Blog Posts</h1>
-        <div class="content-container">
-            <main>
-                <ul class="flow | posts">
-                    {% for post in collections.posts reversed %}
-                    <li class="post">
-                        <div class="post-header">
-                            <div class="post-header-left">
-                                <div class="blog-image">
-                                    <img src="/assets/{{ post.data.imagePath }}" alt="{{ post.data.title }}">
-                                </div>
-                            </div>
-                            <div class="post-header-right">
-                                <h2 class="post-title">
-                                    <a href="{{ post.url }}">{{ post.data.title }}</a>
-                                </h2>
-                                <span class="post-snippet">
-                                    <a href="{{ post.url }}">{{ post.data.snippet }}</a>
-                                </span>
-                                <div class="post-footer">
-                                    <div class="post-tags">
-                                        {% for tag in post.data.tags %}
-                                        <a href="/tags/{{tag}}" class="tag">#{{tag}}</a>
-                                        {% endfor %}
-                                    </div>
-                                    <div class="post-date">
-                                        {{ post.date | date: '%B %e, %Y' }}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </main>
-        </div>
-        <footer class="page-footer">
-            <div class="container">
-                <small>Copyright <b>{{site.author}}</b></small>
-            </div>
-        </footer>
-        <div class="overlay" id="main_overlay" onclick="toggleSidebar()"></div>
-        <aside id="sidebar">
-            <a href="javascript:toggleSidebar()" class="icon-btn" title="Close"><svg class="icon">
-                    <use href="/assets/cross.svg#content" />
-                </svg></a>
-            {% include 'menu' %}
-        </aside>
-    </div>
-</body>
+    <script>
+        const theme = localStorage.getItem('theme');
+        if (theme === 'dark') {
+            document.body.classList.add('dark');
+        }
+    </script>
+    <script>
+        const onLangChange = (toLang, pageUrl) => {
 
+            if (pageUrl.includes("en"))
+                pageUrl = pageUrl.split("en").slice(1)
+
+            if (toLang === "en") {
+                window.location.href = new URL(window.location.protocol + "//" + window.location.host + "/en" + pageUrl);
+            }
+            else {
+                window.location.href = new URL(window.location.protocol + "//" + window.location.host + pageUrl);
+            }
+        }
+    </script>
+    <header class="page-header">
+        <div class="container">
+            <a href="javascript:toggleSidebar()" class="icon-btn" title="Menu" id="menu_btn"><svg class="icon">
+                    <use href="/assets/bars.svg#content" />
+                </svg></a>
+            <a href="/">
+                <img width="48" height="48" class="logo" src="/assets/logo.svg" alt="">
+            </a>
+
+            <nav>
+            </nav>
+            <a href="#"> 404</a>
+            <a href="#"> About </a>
+            <a id="theme_switch" class="icon-btn" href="javascript:toggleTheme()" title="Change theme"><svg
+                    class="icon">
+                    <use href="/assets/moon.svg#content" />
+                </svg></a>
+
+        </div>
+    </header>
+    <div class="main">
+
+        {% for post in collections.posts reversed %}
+
+        <div class="cont">
+            <div class="lef">
+
+                <a id="title" href="{{ post.url }}">
+                    <h4> {{ post.data.title }} </h4>
+                </a>
+                <p>{{ post.data.snippet }}</p>
+                <div class="pop">
+                    {% for tag in post.data.tags %}
+                    <p><a href="/tags/{{tag}}" class="tag">#{{tag}}</a></p>
+                    {% endfor %}
+                    <p>{{ post.date | date: '%B %e, %Y' }}</p>
+                </div>
+
+            </div>
+            <div class="righ" style="background-image: url('/assets/{{ post.data.imagePath }}') ;">
+
+            </div>
+        </div>
+        <hr class="hr" />
+        {% endfor %}
+    </div>
+
+</body>
 </html>
